--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Rosario:ital,wght@0,300..700;1,300..700&family=Share+Tech&family=Single+Day&family=Srisakdi:wght@400;700&family=Viga&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
+        <link rel="icon" type="image/png" href="pics/emoji.png" />
+
 </head>
 
 <body>
@@ -37,13 +39,13 @@
             <div class="up"></div>
             <div class="hero-middle">
                 <div class="arrow " id="prev_slide" onclick="change_back(-1)">
-                  <img src="pics/arrow-left.png" class="up" alt="">
+                  <img src="https://i.postimg.cc/qRzr1pKC/arrow-left.png" class="up" alt="">
                 </div>
                 <div class="logo up">
-                    <img src="pics/logo.png" alt="">
+                    <img src="https://i.postimg.cc/FRZPkSzy/logo.png" alt="">
                 </div>
                 <div class="arrow" id="next_slide" onclick="change_back(1)">
-                   <img src="pics/arrow-right.png" class="up">
+                   <img src="https://i.postimg.cc/k4zmZLNY/arrow-right.png" class="up">
                 </div>
             </div>
             <div class="circles-hero">
@@ -63,7 +65,7 @@
                     Alexandria by supporting each other and creating projects<br>
                     that help us and all teenagers.</p>
             </div>
-            <img src="pics/image1.png" class="up" alt="">
+            <img src="https://i.postimg.cc/DyzNsxq8/image1.png" class="up" alt="">
         </div>
         <div class="hacker">
             <img src="pics/image2.png" class="up" alt="">
@@ -84,17 +86,17 @@
         </div>
         <div class="boxes">
             <div class="box up">
-                <img src="pics/laptop_icon.png" alt="">
+                <img src="https://i.postimg.cc/y8MpMB2Z/laptop-icon.png" alt="">
                 <p class="viga font-40 white"> Learn with each other <br>
 through creating projects <br>
 and getting prizes too!</p>
             </div>
             <div class="box up">
-                <img src="pics/AMA.png" alt="">
+                <img src="https://i.postimg.cc/zfd5wyyr/AMA.png" alt="">
                 <p class="viga font-40 white"> Host monthly AMAs with  <br>experts  in computer <br> science that you always <br> wanted to ask </p>
             </div>
             <div class="box up">
-                 <img src="pics/hackathons.png" alt="">
+                 <img src="https://i.postimg.cc/MKRQsS04/hackathons.png" alt="">
                 <p class="viga font-40 white"> Organize & participate  in <br> hackathons, events and <br>competitions.</p>
             </div>
         </div>
@@ -110,13 +112,13 @@ and getting prizes too!</p>
             </p>    
                 </div>
             <div class="social">
-                <a href="https://www.instagram.com/alexhack_club/" target="_blank" class="up"><img src="pics/instagram.png"  ></a>
-                <a href="https://www.linkedin.com/company/alexhackclub" target="_blank" class="up"><img src="pics/linkedin.png" ></a>
-                <a href="https://www.facebook.com/profile.php?id=61570399486962" target="_blank" class="up"><img src="pics/facebook.png" ></a>
+                <a href="https://www.instagram.com/alexhack_club/" target="_blank" class="up"><img src="https://i.postimg.cc/kXhpyWcw/instagram.png"  ></a>
+                <a href="https://www.linkedin.com/company/alexhackclub" target="_blank" class="up"><img src="https://i.postimg.cc/rmcnpjVy/linkedin.png" ></a>
+                <a href="https://www.facebook.com/profile.php?id=61570399486962" target="_blank" class="up"><img src="https://i.postimg.cc/xjXHzHX9/facebook.png" ></a>
             </div>
         </div>
         <div class="our-community-right">
-            <img src="pics/gallery2.png" class="up" id="gallery">
+            <img src="https://i.postimg.cc/SN3Jbtd9/gallery2.jpg" class="up" id="gallery">
             </div>
     </section>
     <section class="partners">
@@ -124,11 +126,11 @@ and getting prizes too!</p>
             <h1 class="cyan font-100 zain-bold">Our partners</h1>
         </div>
         <div class="hackclub">
-            <img src="pics/hackclub.png" class="up">
-            <img src="pics/hcb.png" class="up">
+            <img src="https://i.postimg.cc/wvZ1Vf1g/hackclub.png" class="up">
+            <img src="https://i.postimg.cc/gjhnBVhR/hcb.png" class="up">
         </div>
         <div class="creativa">
-            <img src="pics/creativa.png" class="up">
+            <img src="https://i.postimg.cc/wMR6j9Td/creativa.png" class="up">
         </div>
         <div class="cta">
             <div class="cta-1 "><a href="https://forms.gle/u3QAQUDPo4TjtQdg9" target="_blank"><h1 class="white anek-devanagari-bold font-40">Become a partner!</h1></a></div>
@@ -140,7 +142,7 @@ and getting prizes too!</p>
             <div class="upper">
                 <h1 class="white share-tech-regular font-120">Alexandrian teen? <br>Join us now!</h1>
                 <div class="image-upper">
-                <img src="pics/emoji.png" alt="">
+                <img src="https://i.postimg.cc/xjBmyCmM/emoji.png" alt="">
                 </div>
             </div>
             <div class="lower">
@@ -160,15 +162,15 @@ and getting prizes too!</p>
         </div>
         <div class="contact-us">
             <h1 class="cyan font-30 rosario-bold">Contact us</h1>
-            <a href="mailto:alexhackclub@gmail.com" target="_blank" class="up"><img src="pics/email.png" ></a>
+            <a href="mailto:alexhackclub@gmail.com" target="_blank" class="up"><img src="https://i.postimg.cc/XXMnZtpB/email.png" ></a>
         </div>
           <div class="social-media">
                         <h1 class="cyan font-30 rosario-bold">Social media</h1>
            <div class="social-footer">
-            <a href="https://www.instagram.com/alexhack_club/" target="_blank" class="up"><img src="pics/instagram.png" alt=""></a>
-            <a href="https://www.linkedin.com/company/alexhackclub" target="_blank" class="up"><img src="pics/linkedin.png" alt=""></a>
-            <a href="https://www.facebook.com/profile.php?id=61570399486962" target="_blank" class="up"><img src="pics/facebook.png" alt=""></a>
-           </div>
+               <a href="https://www.instagram.com/alexhack_club/" target="_blank" class="up"><img src="https://i.postimg.cc/kXhpyWcw/instagram.png"  ></a>
+                <a href="https://www.linkedin.com/company/alexhackclub" target="_blank" class="up"><img src="https://i.postimg.cc/rmcnpjVy/linkedin.png" ></a>
+                <a href="https://www.facebook.com/profile.php?id=61570399486962" target="_blank" class="up"><img src="https://i.postimg.cc/xjXHzHX9/facebook.png" ></a>
+         </div>
         </div>
     </div>
     <div class="copyrights">
