--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Rosario:ital,wght@0,300..700;1,300..700&family=Share+Tech&family=Single+Day&family=Srisakdi:wght@400;700&family=Viga&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-        <link rel="icon" type="image/png" href="pics/emoji.png" />
+        <link rel="icon" type="image/png" href="https://i.postimg.cc/xjBmyCmM/emoji.png" />
 
 </head>
 
