Update index.html last

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&family=Rosario:ital,wght@0,300..700;1,300..700&family=Share+Tech&family=Single+Day&family=Srisakdi:wght@400;700&family=Viga&family=Zain:ital,wght@0,200;0,300;0,400;0,700;0,800;0,900;1,300;1,400&display=swap"
         rel="stylesheet">
-        <link rel="icon" type="image/png" href="https://i.postimg.cc/xjBmyCmM/emoji.png" />
+        <link rel="icon" type="image/png" href="pics/emoji.png" />
 
 </head>
 
@@ -59,24 +59,24 @@
         <div class="AlexHack">
             <div class="text">
                 <h1 class="zain-bold cyan font-60">What is AlexHack club?</h1>
-                <p class="zain-bold dark-blue font-40 text-with-cursor">AlexHack is Alexandria’s computer science club for high<br>
-                    schoolers powered by hack club , We are passionate about<br>
-                    enhancing the computer science community for teenagers in<br>
-                    Alexandria by supporting each other and creating projects<br>
+                <p class="zain-bold dark-blue font-40 text-with-cursor">AlexHack is Alexandria’s computer science club for high
+                    schoolers powered by hack club , We are passionate about
+                    enhancing the computer science community for teenagers in
+                    Alexandria by supporting each other and creating projects
                     that help us and all teenagers.</p>
             </div>
             <img src="https://i.postimg.cc/DyzNsxq8/image1.png" class="up" alt="">
         </div>
         <div class="hacker">
-            <img src="https://i.postimg.cc/vTZ0rmxp/image2.png" class="up" alt="">
+            <img src="pics/image2.png" class="up" alt="">
             <div class="text">
                 <h1 class="zain-bold cyan font-60"> What is A Hacker?</h1>
-                <p class="zain-bold dark-blue font-40 text-with-cursor"> A hacker is not always someone who trespasses on banks or <br>
-                    plunders a friend's V-Bucks. Hackers are individuals who identify <br>
-                    problems that need to be solved and devise the most practical <br>
-                    efficient solutions. These issues frequently call for an inventive <br>
-                    mentality, technological know-how, and exposure to new ideas. <br>
-                    Many can be solved with computers or clever engineering. </p>
+                <p class="zain-bold dark-blue font-40 text-with-cursor"> A hacker is not always someone who trespasses on banks or 
+                    plunders a friend's V-Bucks. Hackers are individuals who identify 
+                    problems that need to be solved and devise the most practical 
+                    efficient solutions. These issues frequently call for an inventive 
+                    mentality, technological know-how, and exposure to new ideas. 
+                    Many can be solved with computers or clever engineering. 
             </div>
         </div>
     </section>
@@ -158,7 +158,6 @@ and getting prizes too!</p>
         <div class="about">
             <h1 class="cyan font-30 rosario-bold">About</h1>
             <p class="white font-26 rosario-bold hh">AlexHack is Alexandria’s computer <br>science club for high schoolers <br>powered by hack club. </p>
-            <p class="single-day-regular white font-26" >By students for students....</p>
         </div>
         <div class="contact-us">
             <h1 class="cyan font-30 rosario-bold">Contact us</h1>
@@ -171,8 +170,10 @@ and getting prizes too!</p>
                 <a href="https://www.linkedin.com/company/alexhackclub" target="_blank" class="up"><img src="https://i.postimg.cc/rmcnpjVy/linkedin.png" ></a>
                 <a href="https://www.facebook.com/profile.php?id=61570399486962" target="_blank" class="up"><img src="https://i.postimg.cc/xjXHzHX9/facebook.png" ></a>
          </div>
+
         </div>
-    </div>
+    </div>                     <p class="single-day-regular white font-26 by-students" >By students for students....</p>
+
     <div class="copyrights">
         <h1 class="zain-bold white font-30">@2025 AlexHack</h1>
     </div>
