--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <img src="https://i.postimg.cc/DyzNsxq8/image1.png" class="up" alt="">
         </div>
         <div class="hacker">
-            <img src="pics/image2.png" class="up" alt="">
+            <img src="https://i.postimg.cc/vTZ0rmxp/image2.png" class="up" alt="">
             <div class="text">
                 <h1 class="zain-bold cyan font-60"> What is A Hacker?</h1>
                 <p class="zain-bold dark-blue font-40 text-with-cursor"> A hacker is not always someone who trespasses on banks or 
